deploy: d96a8986d0c184cfd8b6486f33223c34d4cbf17e

--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="DFG" src="images/dfgde.jpg" style="max-width: 100%" /></th>
+<th style="text-align: center;"><img alt="DFG" src="images/dfgde.jpg" style="max-width: 100%" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><figcaption>DFG</figcaption></td>
+<td style="text-align: center;"><figcaption>DFG</figcaption></td>
 </tr>
 </tbody>
 </table>
