--- a/project/index.html
+++ b/project/index.html
@@ -409,10 +409,10 @@
 
 <h1 id="project-motivation">Project Motivation</h1>
 <h2 id="todo">TODO:</h2>
-<p>Was haben wir gemacht? </p>
-<p>Genauer: Warum haben wir das so gemacht? =&gt; Idee hinter dem Projekt ( Warum sollte man das nutzen?)</p>
-<p>Idee hinter ausführbarem Code =&gt; Motivation</p>
-<p>Wie kann man davon profitieren? </p>
+<p>What did we do?? </p>
+<p>More precicely: Why did we do it this way? =&gt; Idea behind the project (Why should one use it?)</p>
+<p>Idea behind exeutable Code =&gt; Motivation</p>
+<p>How can one profit from this? </p>
 
               
             </article>
