--- a/project/project/index.html
+++ b/project/project/index.html
@@ -534,12 +534,12 @@
 <table>
 <thead>
 <tr>
-<th align="center"><img alt="SusI Overview Graphic" src="../../images/susi_grafik.jpg" style="max-width: 100%" /></th>
+<th style="text-align: center;"><img alt="SusI Overview Graphic" src="../../images/susi_grafik.jpg" style="max-width: 100%" /></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td align="center"><figcaption>SusI Overview</figcaption></td>
+<td style="text-align: center;"><figcaption>SusI Overview</figcaption></td>
 </tr>
 </tbody>
 </table>
@@ -556,12 +556,12 @@
 <p>More information can be found using this Link: <a href="https://virtualprogramminglab.github.io/documentation/">ViPLab</a></p>
 <h2 id="how-to-set-up-the-project-yourself">How to set up the Project yourself</h2>
 <h3 id="todo-requirements">TODO: Requirements</h3>
-<p>Wie kann ich das selbst nutzen? Randbediungungen/ was braucht man für Voraussetzungen für die Nutzung?</p>
+<p>How can I use it myself? Boundary conditions/ What is needed for usage (requirements)?</p>
 <h3 id="todo-instructions">TODO: Instructions</h3>
 <h2 id="todo-im-darus-kontext">TODO: Im DaRUS-Kontext:</h2>
 <ul>
-<li>Interoperabilität: MetadataMapper und</li>
-<li>Archivierung: Anbindung zu Software Heritage vorangetrieben</li>
+<li>Interoperability: MetadataMapper and</li>
+<li>Archiving: Linkage to Software Heritage was propelled</li>
 </ul>
 
               
